--- a/src/ventanas/AdministracionAdmin.form
+++ b/src/ventanas/AdministracionAdmin.form
@@ -59,34 +59,7 @@
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
-<<<<<<< HEAD
         </Component>
-        <Container class="ventanas.PanelInventario" name="pnlInventario">
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Inventario">
-                <Property name="tabTitle" type="java.lang.String" value="Inventario"/>
-              </JTabbedPaneConstraints>
-            </Constraint>
-          </Constraints>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
-=======
-
-          <Layout>
-            <DimensionLayout dim="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="994" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-            <DimensionLayout dim="1">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="636" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-          </Layout>
->>>>>>> main
-        </Container>
         <Container class="ventanas.PanelProductos" name="pnlProductos">
           <Properties>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -104,22 +77,7 @@
             </Constraint>
           </Constraints>
 
-<<<<<<< HEAD
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
-=======
-          <Layout>
-            <DimensionLayout dim="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="994" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-            <DimensionLayout dim="1">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="636" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-          </Layout>
->>>>>>> main
         </Container>
         <Container class="ventanas.panelVenta" name="pnlVenta">
           <Properties>
@@ -175,7 +133,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
         </Container>
-        <Container class="ventanas.PanelInventario" name="pnlInventario">
+        <Container class="ventanas.PanelInventario" name="pnlInventario1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="Inventario">
